# spire-bridge

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
docs/plans/: phase-1-iteration-2.md  phase-1-spire-bridge.md  phase-2.md
docs/qa/: README.md  iteration-1-defects.md
docs/screenshots/: .gitkeep
scripts/: check.sh  gen-types.sh
src/: App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sources-archive/hermes/: http.rs  mod.rs  normalize.rs
src-tauri/.sources-archive/opencode/: http.rs  sse.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_seed_sources.sql  0003_sync_meta.sql  V1__init.sql  V2__seed_sources.sql
src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/sources/: mod.rs
src-tauri/src/sources/claude/: jsonl.rs  mod.rs  normalize.rs  otel.rs
src-tauri/src/sources/hermes/: ws.rs
src-tauri/src/sources/opencode/: mod.rs  normalize.rs
src-tauri/src/store/: mod.rs  redact.rs  schema.rs
src-tauri/src/sync/: backfill.rs  live.rs  mod.rs
src/components/charts/: ActivityHeatmap.tsx  CostBreakdown.tsx  CostSparkline.tsx  SessionCostChart.tsx
src/components/glass/: GlassButton.tsx  GlassCard.tsx  GlassPanel.tsx  GlassPill.tsx  index.ts
src/components/live/: LiveIndicator.tsx  LiveStream.tsx
src/components/primitives/: Empty.tsx  Icon.tsx  Skeleton.tsx
src/lib/: cn.ts
src/routes/: .gitkeep  __root.tsx  cost.tsx  index.tsx  settings.tsx
src/styles/: glass.css  globals.css
tests/ts/: api.test.ts  glass.test.tsx  subagentTree.test.ts
(+18 files in other folders)
